<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">

    <ScrollView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         style="@style/Widget.Material3.BottomSheet">

        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
             android:orientation="vertical"
             android:id="@+id/standard_bottom_sheet">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/drag_handle" />

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:textSize="18sp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
                 android:id="@+id/t1"
                 android:text="@string/title_project_information" />

            <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:padding="8dp"
                 android:orientation="horizontal"
                 android:id="@+id/linear_op01">

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 app:boxCornerRadiusTopEnd="20dp"
                 android:layout_marginBottom="5dp"
                 app:boxCornerRadiusBottomStart="20dp"
                 app:boxCornerRadiusBottomEnd="20dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:hint="@string/hint_project_name"
                     android:id="@+id/projName"
                     android:text="My Game" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 app:boxCornerRadiusTopEnd="20dp"
                 app:boxCornerRadiusBottomStart="20dp"
                 app:boxCornerRadiusBottomEnd="20dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="5dp"
                 app:boxCornerRadiusTopStart="20dp">

                <com.google.android.material.textfield.TextInputEditText
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:hint="@string/hint_package_name"
                     android:id="@+id/pkgName"
                     android:text="com.example.newgame" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                 android:layout_height="wrap_content"
                 android:layout_width="200dp"
                 android:layout_marginBottom="20dp"
                 android:textAllCaps="false"
                 style="@style/GamEngine.Button"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center"
                 android:id="@+id/createProj"
                 android:text="@string/button_create_project" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>